[project]
name = "agent-pulse"
version = "0.1.0"
description = "AI Agent open-source ecosystem data analysis dashboard."
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.58.0",
    "pandas==3.0.3",
    "plotly==6.8.0",
    "requests==2.34.2",
    "python-dotenv==1.2.2",
]

[tool.uv]
package = false
